2007-11-29  Matthias Clasen <mclasen@redhat.com>

	* *.c: More coding style fixes.

2007-11-29  Matthias Clasen <mclasen@redhat.com>

	* gasyncresult.c: Add another paragraph to the intro,
	adjust coding style of example.

2007-11-29  A. Walton <awalton@svn.gnome.org>

	* gappinfo.c:
	  Fixes unknown meaning in GAppLaunchContext docs.
	* gfile.c:
	  Clarify asynchronous ops.
	* gfileattribute.c:
	  Fix entity tag docs.
	* gicon.c:
	* gthemedicon.c:
	  Provides missing gtk-doc section, fixes API docs slighly.
	* gsimpleasyncresult.c:
	  Fill in missing info in docs.
	* gunixinputstream.c:
	* gunixoutputstream.c:
	  Be more expressive in short description.
	* gunixvolume.c:
	  Remove gtk-doc stubs for non-public API.

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* *.c: Coding style fixups

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* inotify/inotify-helper.c: Don't export the lock from libgio.

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am:
	* abicheck.sh: Fix copy-and-paste leftovers 

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gfile.h: Add G_FILE_COPY_FLAGS_NONE for consistency.

2007-11-28  Alexander Larsson  <alexl@redhat.com>

        * Makefile.am:
        * gdriveprivate.h:
	Removed unnecessary file
	
        * gdesktopappinfo.[ch]:
        * gdummyfile.[ch]:
        * gfile.c:
        * glocaldirectorymonitor.[ch]:
        * glocalfile.[ch]:
        * glocalfileenumerator.[ch]:
        * glocalfileinputstream.[ch]:
        * glocalfilemonitor.[ch]:
        * glocalfileoutputstream.[ch]:
        * glocalvfs.[ch]:
        * gnativevolumemonitor.c:
        * gpollfilemonitor.[ch]:
        * gunionvolumemonitor.[ch]:
        * gunixdrive.[ch]:
        * gunixvolume.[ch]:
        * gunixvolumemonitor.[ch]:
        * gvfs.c:
        * gvolumeprivate.h:
        * inotify/ginotifydirectorymonitor.[ch]:
        * inotify/ginotifyfilemonitor.[ch]:
        * inotify/inotify-helper.c:
	Append _ to all internal functions
	